--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   shared_preferences: ^2.1.0
   path_provider: ^2.0.14
   image_picker: ^0.8.7+4
+  gallery_saver: ^2.3.2
+  path: ^1.8.2
+  google_mlkit_text_recognition: ^0.6.0
+  google_mlkit_commons: ^0.3.0
+
 
 dev_dependencies:
   flutter_test:
